# RiftSpireEngine

./: CMakeLists.txt  README.md
Editor/: CMakeLists.txt  EditorApp.cpp  EditorLayout.h  EditorTheme.h
Editor/Panels/: BlockCanvasPanel.cpp  BlockCanvasPanel.h  BlockInspectorPanel.cpp  BlockInspectorPanel.h  BlockPalettePanel.cpp  BlockPalettePanel.h  ConsolePanel.cpp  ConsolePanel.h  GameViewPanel.cpp  GameViewPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Editor/Rendering/: BlockGeometry.cpp  BlockGeometry.h  NanoVGBlockRenderer.cpp  NanoVGBlockRenderer.h  NanoVGRenderer.cpp  NanoVGRenderer.h  Scratch3BlockRenderer.cpp  Scratch3BlockRenderer.h  ScratchBlockRenderer.cpp  ScratchBlockRenderer.h
Engine/: CMakeLists.txt  RiftSpire.h
Engine/Audio/: Audio.h
Engine/Core/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Types.h  UUID.h  Window.cpp  Window.h
Engine/ECS/: Components.h  Entity.h  Scene.cpp  Scene.h
Engine/Network/: Network.h
Engine/Physics/: Physics.h
Engine/Platform/: Platform.h
Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Scripting/: CMakeLists.txt  Scripting.cpp  Scripting.h
Engine/Scripting/Blocks/: AbilityBlocks.cpp  AbilityBlocks.h  AllBlocks.h  ControlFlowBlocks.cpp  ControlFlowBlocks.h  DataBlocks.cpp  DataBlocks.h  DebugBlocks.cpp  DebugBlocks.h  EventBlocks.cpp  EventBlocks.h  HealthBlocks.cpp  HealthBlocks.h  MovementBlocks.cpp  MovementBlocks.h  OperatorBlocks.cpp  OperatorBlocks.h  TimeBlocks.cpp  TimeBlocks.h
Engine/Scripting/Core/: Block.cpp  Block.h  BlockRegistry.cpp  BlockRegistry.h  BlockScript.cpp  BlockScript.h  BlockTypes.h  Value.cpp  Value.h
Engine/Scripting/Execution/: EventSystem.cpp  EventSystem.h  ExecutionContext.cpp  ExecutionContext.h  ExecutionEngine.cpp  ExecutionEngine.h  ExecutionStack.cpp  ExecutionStack.h  ScriptVM.cpp  ScriptVM.h
Engine/Scripting/Serialization/: AbilityBlueprint.cpp  AbilityBlueprint.h  ScriptSerializer.cpp  ScriptSerializer.h
Game/: CMakeLists.txt  RiftSpireGame.cpp
